tests/cases/errors/parser/struct_init1.vnm
struct person {
  name;
  age;
}

fn main() {
  let p = person {name: 1, age: "Hello, world!"};
  return 0;
}

main();
